--- a/Starter_Code/time_series_analysis.ipynb
+++ b/Starter_Code/time_series_analysis.ipynb
@@ -1192,6 +1192,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `Q:` Based on the p-values, is the model a good fit (p < 0.05)?\n",
+    "#### `A:` This model is a good fit"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -1445,10 +1453,10 @@
    "metadata": {},
    "source": [
     "#### `A:` \n",
-    "- Not sure, Looking at the trend line and the actual line we see profitable trading opportunities: The actual line has dipped below the trend line we can see this as a sign that the Yen is temporarily more undervalued than it should be (and, therefore, we'd see this as a short-term buying opportunity). However, I am not very confident about the forecast models.\n",
+    "- Not sure, Looking at the trend line and the actual line we see profitable trading opportunities: The actual line has dipped below the trend line we can see this as a sign that the Yen is temporarily more undervalued than it should be (and, therefore, we'd see this as a short-term buying opportunity). However, I am not very confident about the ARMA and ARIMA forecast models.\n",
     "\n",
-    "- Risk is expected to increase\n",
-    "- In this particular case I am not very confident of using the models for trading because both the ARMA and ARIMA model have very high p value and don't seem to be a good fit.\n"
+    "- Risk is expected to increase.\n",
+    "- In this particular case I am not very confident of using the ARMA and ARIMA model. They have very high p value so don't seem to be a good fit. However, I would use GARCH model to predict risk, the results seem to be statistically significant.\n"
    ]
   },
   {
