--- a/Starter_Code/regression_analysis.ipynb
+++ b/Starter_Code/regression_analysis.ipynb
@@ -1036,7 +1036,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### `Q:` Does this model perform better or worse on out-of-sample data compared to in-sample data?\n",
+    "##### `Q:` Does this model performs better or worse on out-of-sample data compared to in-sample data?\n",
     "##### `A:` The model performs better on out-of-sample data compared to the in-sample data."
    ]
   },
